quantityInCellar CRUD
