# src/api-docs/openapi.json
@@ -27,6 +27,10 @@
     {
       "name": "cellar",
       "description": "Everything about Cellars  ✅(Verified June-12-2019_19h30)"
+    },
+    {
+      "name": "quantityInCellar",
+      "description": "Everything about QuantityInCellars  🆗(Verified June-12-2019_23h00)"
     }
   ],
   "paths": {
@@ -754,7 +758,7 @@
             "description": "The id of the wanted cellar",
             "required": true,
             "schema": {
-              "type": "string"
+              "type": "integer"
             }
           }
         ],
@@ -793,7 +797,7 @@
             "description": "The id of the cellar to update",
             "required": true,
             "schema": {
-              "type": "string"
+              "type": "integer"
             }
           }
         ],
@@ -839,7 +843,228 @@
             "description": "The id of the cellar to delete",
             "required": true,
             "schema": {
-              "type": "string"
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Request response"
+          },
+          "401": {
+            "description": "Access token is missing or invalid",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      }
+    },
+    "/quantityInCellar": {
+      "get": {
+        "tags": [
+          "quantityInCellar"
+        ],
+        "summary": "Gets all quantityInCellars",
+        "description": "Returns a list containing all quantityInCellars.",
+        "parameters": [
+          {
+            "name": "offset",
+            "in": "query",
+            "description": "The number of items to skip before starting to collect the result set",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "The numbers of items to return",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of QuantityInCellar",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/QuantityInCellar"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Access token is missing or invalid",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      },
+      "post": {
+        "tags": [
+          "quantityInCellar"
+        ],
+        "summary": "Creates a quantityInCellar",
+        "description": "Creates a quantityInCellar with request body parameters.",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "quantity": {
+                    "type": "integer"
+                  },
+                  "cellarId": {
+                    "type": "integer"
+                  },
+                  "bottleId": {
+                    "type": "integer"
+                  }
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "QuantityInCellar created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/QuantityInCellar"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Access token is missing or invalid",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "JWT-Admin": []
+          }
+        ]
+      }
+    },
+    "/quantityInCellar/{id}": {
+      "get": {
+        "tags": [
+          "quantityInCellar"
+        ],
+        "summary": "Get one quantityInCellar",
+        "description": "Returns the wanted quantityInCellar.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The id of the wanted quantityInCellar",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The wanted quantityInCellar",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/QuantityInCellar"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Access token is missing or invalid",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      },
+      "patch": {
+        "tags": [
+          "quantityInCellar"
+        ],
+        "summary": "update one quantityInCellar",
+        "description": "Returns the updated quantityInCellar",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The id of the quantityInCellar to update",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "quantity": {
+                    "type": "integer"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "The number of modified objects"
+          },
+          "401": {
+            "description": "Access token is missing or invalid",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "quantityInCellar"
+        ],
+        "summary": "delete one quantityInCellar",
+        "description": "delete a quantityInCellar by id.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The id of the quantityInCellar to delete",
+            "required": true,
+            "schema": {
+              "type": "integer"
             }
           }
         ],
@@ -936,6 +1161,29 @@
           },
           "userUUID": {
             "type": "string"
+          },
+          "createdAt": {
+            "type": "string"
+          },
+          "updatedAt": {
+            "type": "string"
+          }
+        }
+      },
+      "QuantityInCellar": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer"
+          },
+          "quantity": {
+            "type": "integer"
+          },
+          "cellarId": {
+            "type": "integer"
+          },
+          "bottleId": {
+            "type": "integer"
           },
           "createdAt": {
             "type": "string"
