# src/api/quantityInCellar/middlewares/deleteOne.js
@@ -1,0 +1,8 @@
+import quantityInCellarServices from '../../../modules/quantityInCellar/services';
+
+export default function (req, res, next) {
+  return quantityInCellarServices
+    .deleteOne(req.params.id)
+    .then(response => res.sendStatus(response))
+    .catch(err => next(err));
+}
