# src/api/quantityInCellar/middlewares/findOne.js
@@ -1,0 +1,8 @@
+import quantityInCellarServices from '../../../modules/quantityInCellar/services';
+
+export default function (req, res, next) {
+  return quantityInCellarServices
+    .findOne(req.params.id)
+    .then(response => res.send(response))
+    .catch(err => next(err));
+}
